[package]
name = "thiserror_context_error"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "macros", "migrate", "sqlite", "uuid", "time"] }
thiserror = "1.0.52"
thiserror-context = "0.1.1"
tokio = { version = "1.40.0", features = ["full"] }
